@@ -158,18 +158,20 @@ def pref_init(pref):
     pref.smart_nav_last_position = None
 Mixin.setPlugin('preference', 'init', pref_init)
 
-def on_modified_text(win, event):
+def on_modified(win):
     if hasattr(win, 'multiview') and win.multiview:
         return
-    type = event.GetModificationType()
-    for flag in (wx.stc.STC_MOD_INSERTTEXT, wx.stc.STC_MOD_DELETETEXT):
-        if flag & type:
-            def f():
-                win.pref.smart_nav_last_position = win.getFilename(), win.save_state()
-                win.pref.save()
-            wx.CallAfter(f)
-            return
-Mixin.setPlugin('editor', 'on_modified_text', on_modified_text)
+    win.pref.smart_nav_last_position = win.getFilename(), win.save_state()
+    win.pref.save()
+#    type = event.GetModificationType()
+#    for flag in (wx.stc.STC_MOD_INSERTTEXT, wx.stc.STC_MOD_DELETETEXT):
+#        if flag & type:
+#            def f():
+#                win.pref.smart_nav_last_position = win.getFilename(), win.save_state()
+#                win.pref.save()
+#            wx.CallAfter(f)
+#            return
+Mixin.setPlugin('editor', 'on_modified', on_modified)
 
 #this function will replace the one in mSearch.py
 def OnSearchLastModify(win, event=None):
